k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "api-backend-config"}'
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
